notify me and regnereate fixed on safari

--- a/assets/scss/components/app-info-section.scss
+++ b/assets/scss/components/app-info-section.scss
@@ -71,6 +71,8 @@
         display: inline-block;
         vertical-align: middle;
         line-height: 20px;
+        min-width: 140px;
+        text-align: center;
       }
     }
   }
